<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/design_shape"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_shape"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/titlesColor"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/logow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="160dp"
            android:text="@string/learning"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/titlesColor"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user"
            android:gravity="center"
            android:hint="@string/user"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/edittext_design"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_below="@id/user"
            android:gravity="center"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/edittext_design"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_pass"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_design"
            android:text="Login"
            android:textColor="@color/titlesColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/do_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/do_not_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/register"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:textColor="@color/primaryColor"
            android:layout_toRightOf="@+id/do_not"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>

</LinearLayout>