<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.PanelFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/primaryDarkColor"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="Toolbox"
            android:background="?attr/colorPrimary">
            <SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="210dp">
            </SearchView>
        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_shape"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/categor_as"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/que_vas_a_reparar_hoy"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryDarkColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/plomeria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/plomeria"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />
        <VideoView
            android:id="@+id/video1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_marginStart="150dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/carpinteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/carpinteria"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />
        <VideoView
            android:id="@+id/video2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_marginStart="150dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/electricidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/electricidad"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />
        <VideoView
            android:id="@+id/video3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_marginStart="150dp"
            android:layout_marginTop="490dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:minWidth="300dp"
            android:minHeight="200dp" />
        <ImageView
            android:id="@+id/more_categories"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_expand_more_24"
            />
    </RelativeLayout>
</FrameLayout>